Fix Bulma column overflow.

--- a/app/assets/stylesheets/librum-components/bulma-styles.css
+++ b/app/assets/stylesheets/librum-components/bulma-styles.css
@@ -4,11 +4,18 @@
 
 .is-borderless { border: 0; }
 
+.has-text-overflow-ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 /*******************************************************************************
  * COMPONENTS
  ******************************************************************************/
 
 .buttons.is-gapless { gap: 0; }
+
+.column { min-width: 0; }
 
 /*******************************************************************************
  * FORMS
